--- a/style.css
+++ b/style.css
@@ -13,65 +13,27 @@ Tags: custom-background, custom-colors, custom-menu, editor-style, responsive-la
 */
 
 /*------------------------------------------------------------------------
->>> TABLE OF CONTENTS:
---------------------------------------------------------------------------
-# Base Styles
-	## Positioning
-	## Typography
-	## Titles
-	## Buttons
-	## Et Cetera
-# Header
-# Navigation
-	## Main Menu
-	## Other Menus
-	## Social Menus
-# Modules
-	## Global
-# Pages
-# Posts
-# Plugins
-	## WooCommerce
-# Footer
-------------------------------------------------------------------------*/
-
-/*------------------------------------------------------------------------
 # Base Styles
 ------------------------------------------------------------------------*/
 
 /*-----------------------------------------------
-## Positioning
------------------------------------------------*/
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-	margin: 1em 0;
+## Spacing
+-----------------------------------------------*/ 
+.site-branding {
+	padding-bottom: 10px;
 }
-p {
-	margin-bottom: 15px;
-}
-.mod-divider p {
-	margin-top: -30px;
+.entry-content {
+	margin: 0;
 }
 
 /*-----------------------------------------------
 ## Typography
 -----------------------------------------------*/
-h2,
-.title-main {
-	font-weight: bold;
-}
 .site-footer a {
 	text-decoration: underline;
 }
 .entry-title a:hover,
-.button-primary:hover,
-.button-primary:active,
-.button-secondary:hover,
-.button-secondary:active,
-input[type="submit"]:hover,
-input[type="submit"]:focus,
-.woocommerce p.buttons a.button:hover,
-.woocommerce p.buttons a.button:focus,
+.entry-title a:focus,
 .site-footer a:hover,
 .site-footer a:focus {
 	text-decoration: none;
@@ -80,39 +42,23 @@ input[type="submit"]:focus,
 	text-align: right;
 }
 
-/* Icons */
-.mod-divider i {
-	font-size: 52px;
-	padding: 0 .5em;
-}
-.mod-icon-circle i {
-	font-size: 35px;
-}
-
-/* xs */
+/* Extra small devices (phones, less than 768px) */
 .entry-title,
 #secondary-menu,
 #tertiary-menu,
-.mod-divider p,
+.menu-social,
 .site-footer,
 .site-info,
 .attribution,
 .site-title,
 .site-description,
 .navbar-default .navbar-nav,
-.navbar-default .navbar-nav .open .dropdown-menu,
-.menu-social,
-.title-main,
-.xs-center,
-.mod-img,
-.mod-img-circle,
-.p-button-primary,
-.p-button-secondary {
+.navbar-default .navbar-nav .open .dropdown-menu {
 	text-align: center;
 }
 
-/* sm */
-@media (min-width: 768px) {
+/* Small devices (tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
 	.navbar-default .navbar-nav,
 	.navbar-default .navbar-nav .open .dropdown-menu {
 		text-align: left;
@@ -122,32 +68,17 @@ input[type="submit"]:focus,
 	}
 }
 
-/* md */
-@media (min-width: 992px) {
+/* Medium devices (desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
 	.site-title,
-	.site-description,
-	.xs-center,
-	.mod-img,
-	.mod-img-circle,
-	.p-button-primary,
-	.p-button-secondary {
+	.site-description {
 		text-align: left;
-	}
-	.title-main {
-		text-align: right;
 	}
 }
 
 /*-----------------------------------------------
 ## Titles
 -----------------------------------------------*/
-.page-template-page_home .entry-title {
-	display: none;
-}
-.title-main {
-	margin: 0;
-	padding: 20px 0;
-}
 .post-title-hidden .entry-meta {
 	margin-top: 50px;
 }
@@ -169,55 +100,6 @@ input[type="submit"]:focus,
 }
 .entry-title a {
 	padding: 0 15px;
-}
-
-/*-----------------------------------------------
-## Buttons
------------------------------------------------*/
-.button-primary,
-.button-secondary,
-input[type="submit"] {
-	border-radius: 2px;
-	display: inline-block;
-	padding: 8px 15px;
-}
-
-/* Positioning */
-.p-button-primary,
-.p-button-secondary {
-	margin: 25px 0;
-	padding-top: 15px;
-}
-
-/* Block vs. Inline */
-.button-primary,
-.button-secondary {
-	display: block;
-	margin-top: 15px;
-}
-.call-to-action .p-button-primary {
-	margin-top: 0;
-}
-
-/* sm */
-@media (min-width: 500px) {
-	.button-primary,
-	.button-secondary,
-	.call-to-action .p-button-primary {
-		display: inline;
-		margin-top: 0;
-	}
-	.gridblock .p-button-secondary {
-		margin: 25px 0;
-	}
-}
-
-/*-----------------------------------------------
-## Et Cetera
------------------------------------------------*/
-hr {
-	border: 0;
-	height: 1px;
 }
 
 /*------------------------------------------------------------------------
@@ -273,8 +155,8 @@ hr {
 	background: none;
 }
 
-/* sm */
-@media (min-width: 768px) {
+/* Small devices (tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
 	.navbar-default {
 		float: right;
 	}
@@ -329,39 +211,12 @@ hr {
 	margin-top: 0;
 }
 
-/* sm */
-@media (min-width: 768px) {
+/* Small devices (tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
 	.menu-social {
 		margin-top: 15px;
 		padding-right: 15px;
 	}
-}
-
-/*------------------------------------------------------------------------
-# Modules
-------------------------------------------------------------------------*/
-
-/*-----------------------------------------------
-## Global
------------------------------------------------*/
-.mod-divider {
-	margin: 4em 0;
-}
-.mod-icon-circle i {
-	border-radius: 50%;
-	padding: 15px;
-}
-.mod-icon-circle .fa-lightbulb-o {
-	padding: 15px 20px;
-}
-blockquote,
-.mod-blockquote {
-	padding-bottom: 0;
-	padding-top: 0;
-}
-blockquote p,
-.mod-blockquote p {
-	padding-left: 15px;
 }
 
 /*------------------------------------------------------------------------
@@ -372,10 +227,12 @@ blockquote p,
 	background: transparent;
 	border: none;
 }
+
 /* Search Page */
 .search .jumbotron {
 	background: none;
 }
+
 /*------------------------------------------------------------------------
 # Posts
 ------------------------------------------------------------------------*/
@@ -394,16 +251,6 @@ blockquote p,
 	padding: 20px 15px;
 }
 
-/* Call to Action */
-.single .call-to-action {
-	display: none;
-}
-
-/* Buttons */
-.form-submit .submit {
-	margin-bottom: 10px;
-}
-
 /*------------------------------------------------------------------------
 # Plugins
 ------------------------------------------------------------------------*/
@@ -411,13 +258,6 @@ blockquote p,
 /*-----------------------------------------------
 ## WooCommerce
 -----------------------------------------------*/
-.woocommerce .page-title {
-	margin: 0;
-}
-.woocommerce p.buttons a.button:hover {
-	background-image: none;
-	text-decoration: none;
-}
 
 /*------------------------------------------------------------------------
 # Footer
@@ -433,18 +273,4 @@ blockquote p,
 }
 .attribution {
 	padding-bottom: 30px;
-}
-
-
-/*------------------------------------------------------------------------
-# Appended
-------------------------------------------------------------------------*/
-.site-branding {
-	padding-bottom: 10px;
-}
-.site-title, .site-description {
-	margin: 0;
-}
-.entry-content {
-	margin: 0;
 }
