--- a/inc/boldgrid-theme-framework-config/scss/palette-formats.scss
+++ b/inc/boldgrid-theme-framework-config/scss/palette-formats.scss
@@ -2,17 +2,12 @@
 # Palettes
 ------------------------------------------------------------------------*/
 .palette-primary {
-	background: $palette-primary_3;
-	color: $text-contrast-palette-primary_3;
+	background: $palette-primary-neutral-color;
+	color: $text-contrast-palette-primary-neutral-color;
 
 	/*-----------------------------------------------
-	## 1
+	## Headings
 	-----------------------------------------------*/
-	.widget .table-striped > tbody > tr:nth-child(2n+1) > td  {
-		background: $palette-primary_1;
-		border: 1px solid $palette-primary_1;
-		color: $text-contrast-palette-primary_1;
-	}
 	h1,
 	h2,
 	h3,
@@ -21,107 +16,70 @@
 	h6,
 	caption,
 	#menu-social li a {
-		color: $palette-primary_1;
-	}
-	hr {
-		background: $palette-primary_1;
-	}
-	.entry-title::before {
-		border-top: 1px solid $palette-primary_1;
-	}
-	.navbar-default .navbar-nav > .open > a,
-	.navbar-default .navbar-nav > .open > a:hover,
-	.navbar-default .navbar-nav > .open > a:focus,
-	.navbar-default .navbar-nav > .current-menu-parent > a,
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus  {
-		background: $palette-primary_2;
-		color: $text-contrast-palette-primary_2;
-	}
-	#secondary-menu a,
-	#tertiary-menu a,
-	#menu-social a {
-		color: $text-contrast-palette-primary_1;
-	}
-	#secondary-menu,
-	#tertiary-menu {
-		.current-menu-item a {
-			color: $palette-primary_2;
-		}
-	}
-	#footer-center-menu .current-menu-item a {
-		color: $palette-primary_1;
-	}
-
-	/*-----------------------------------------------
-	## 2
-	-----------------------------------------------*/
-	a,
-	.link-primary,
-	.link-secondary,
-	.heading-alt,
-	#menu-social li a:hover,
-	#menu-social li a:focus,
-	#secondary-menu a[href]:hover,
-	#tertiary-menu a[href]:hover,
-	.navbar-default .navbar-nav > li > a:hover,
-	.navbar-default .navbar-nav > li > a:focus,
-	.navbar-default .navbar-nav > .active > a,
-	.navbar-default .navbar-nav > .active > a:hover,
-	.navbar-default .navbar-nav > .active > a:focus,
-	.palette-primary.disabled-footer .site-footer a {
 		color: $palette-primary_2;
 	}
-	.navbar-default .navbar-toggle:hover .icon-bar,
-	.navbar-default .navbar-toggle:focus .icon-bar
-	.navbar-default .navbar-toggle .icon-bar {
-		background-color: $palette-primary_2;
+	.site-title a {
+		color: $text-contrast-palette-primary-neutral-color;
 	}
-	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
-		color: $text-contrast-palette-primary_3;
-	}
-	.navbar-default .navbar-nav .dropdown-menu {
-		background: $palette-primary_3;
-	}
-	.navbar-default .navbar-nav > .dropdown.active.open > a,
-	.navbar-default .navbar-nav > li.dropdown.active.open > a:hover,
-	.navbar-default .navbar-nav > li.dropdown.active.open > a:focus,
-	.navbar-default .navbar-nav > .dropdown.active.open > a:hover {
-		color: $text-contrast-palette-primary_2;
+	.entry-title::before {
+		border-top: 1px solid $palette-primary_2;
 	}
 
-	/* Small devices (tablets, 768px and up) */
-	@media only screen and (min-width: 768px) {
-		.navbar-default .navbar-nav .open .dropdown-menu > li > a {
-			color: $text-contrast-palette-primary_3;
+	/*-----------------------------------------------
+	## Buttons
+	-----------------------------------------------*/
+	a.btn:hover,
+	a.btn:focus,
+	a.button-primary:hover,
+	a.button-primary:focus {
+		color: $text-contrast-palette-primary_1; 
+	}
+
+	/*-----------------------------------------------
+	## Elements
+	-----------------------------------------------*/
+	hr {
+		background: $palette-primary_2;
+	}
+
+	/*-----------------------------------------------
+	## Nav
+	-----------------------------------------------*/
+	#primary-navbar a,
+	#secondary-menu a,
+	#tertiary-menu a,
+	#menu-social-items a,
+	#footer-center-menu a {
+		color: $text-contrast-palette-primary-neutral-color;
+	}
+	#primary-navbar,
+	#secondary-menu,
+	#tertiary-menu,
+	#menu-social-items,
+	#footer-center-menu {
+		.current-menu-item a,
+		a:hover,
+		a:focus {
+			color: $palette-primary_1;
 		}
 	}
 
 	/*-----------------------------------------------
-	## 3
+	## Blog
 	-----------------------------------------------*/
-	.palette-primary.disabled-footer .site-footer,
-	.entry-title a {
-		background-color: $palette-primary_3;
-	}
-	.site-title a,
-	#secondary-menu a,
-	#tertiary-menu a,
-	#menu-social a,
-	.comments-area .comment-content p {
-		color: $text-contrast-palette-primary_3;
-	}
-	.navbar-default .dropdown-menu > li > a {
-		color: $text-contrast-palette-primary_3;
-	}
-	.navbar-default .navbar-toggle {
-		border-color: $palette-primary_3;
-	}
-	.navbar-default .navbar-toggle:hover,
-	.navbar-default .navbar-toggle:focus {
-		background-color: $palette-primary_3;
-	}
 	.widget-area {
 		border: 1px solid $text-contrast-palette-primary_3;
+	}
+
+	/*-----------------------------------------------
+	## WooCommerce
+	-----------------------------------------------*/
+	
+	/*-----------------------------------------------
+	## Footer
+	-----------------------------------------------*/
+	.site-footer a,
+	.post-edit-link {
+		color: $palette-primary_1;
 	}
 }
