--- a/style.css
+++ b/style.css
@@ -186,9 +186,9 @@ blockquote,
 ## Comments
 -----------------------------------------------*/
 
-/*------------------------------------------------------------------------
-# Widgets
-------------------------------------------------------------------------*/
+/*-----------------------------------------------
+## Widgets
+-----------------------------------------------*/
 .widget,
 #header-widget-area,
 #footer-widget-area {
@@ -196,11 +196,11 @@ blockquote,
 }
 
 /*------------------------------------------------------------------------
-# WooCommerce
+# Plugins
 ------------------------------------------------------------------------*/
 
 /*-----------------------------------------------
-## 
+## WooCommerce
 -----------------------------------------------*/
 
 /*------------------------------------------------------------------------
