--- a/style.css
+++ b/style.css
@@ -35,19 +35,17 @@ Tags: custom-background, custom-colors, custom-menu, editor-style, responsive-la
 .site-footer a:focus {
 	text-decoration: none;
 }
-
-/* Extra small devices (phones, less than 768px) */
+.site-title,
+.site-description,
+.navbar-default .navbar-nav,
+.navbar-default .navbar-nav .open .dropdown-menu,
 .entry-title,
 #secondary-menu,
 #tertiary-menu,
 .menu-social,
 .site-footer,
 .site-info,
-.attribution,
-.site-title,
-.site-description,
-.navbar-default .navbar-nav,
-.navbar-default .navbar-nav .open .dropdown-menu {
+.attribution {
 	text-align: center;
 }
 
@@ -105,31 +103,11 @@ blockquote,
 .navbar-default .navbar-nav {
 	margin-left: -15px;
 }
-
-/* Links */
 .navbar-default .navbar-nav > li > a {
 	padding: 10px;
 }
 .navbar-default .navbar-nav > li:first-child > a {
 	margin-left: 0;
-}
-
-/* Hover & Active */
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus,
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus,
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:hover,
-.navbar-default .navbar-nav > .open > a:focus,
-.navbar-default .navbar-nav > .current-menu-parent > a,
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus,
-.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-	background: none;
 }
 
 /* Small devices (tablets, 768px and up) */
