added bg-color to posts

--- a/inc/boldgrid-theme-framework-config/scss/palette-formats.scss
+++ b/inc/boldgrid-theme-framework-config/scss/palette-formats.scss
@@ -119,6 +119,19 @@
 	}
 
 	/*-----------------------------------------------
+	## Posts
+	-----------------------------------------------*/
+	&.archive .site-content,
+	&.archive .site-header,
+	&.archive .site-footer,
+	&.single .site-content,
+	&.single .site-header,
+	&.single .site-footer {
+		background: $palette-primary-neutral-color;
+		color: $text-contrast-palette-primary-neutral-color;
+	}
+
+	/*-----------------------------------------------
 	## Widgets
 	-----------------------------------------------*/
 	.well {
@@ -133,8 +146,8 @@
 		background: none;
 	}
 	.widget_calendar .table-striped > tbody > tr:nth-of-type(2n+1) {
-    	background-color: $text-contrast-palette-primary_5;
-    	color: $palette-primary_5;
+			background-color: $text-contrast-palette-primary_5;
+			color: $palette-primary_5;
 	}
 	.widget_calendar #today {
 		color: $palette-primary_1;
@@ -151,9 +164,9 @@
 	}
 	mark,
 	.mark {
- 		background: $palette-primary_1;
- 		color: $text-contrast-palette-primary_1;
- 	}
+		background: $palette-primary_1;
+		color: $text-contrast-palette-primary_1;
+	}
 
 	/*-----------------------------------------------
 	## Footer
