margin on .entry-footer

--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ Tags: custom-background, custom-colors, custom-menu, editor-style, responsive-la
 .entry-content {
 	margin: 0;
 }
+.archive .entry-footer,
+.single .entry-footer {
+	margin-bottom: 50px;
+}
 
 /*-----------------------------------------------
 ## Typography
