--- a/style.css
+++ b/style.css
@@ -22,9 +22,7 @@ Tags: custom-background, custom-colors, custom-menu, editor-style, responsive-la
 .entry-content {
 	margin: 0;
 }
-.hentry {
-	margin: 0 auto 75px;
-}
+
 /*-----------------------------------------------
 ## Typography
 -----------------------------------------------*/
@@ -179,6 +177,9 @@ blockquote,
 /*------------------------------------------------------------------------
 # Posts
 ------------------------------------------------------------------------*/
+.post {
+	margin: 0 auto 50px;
+}
 
 /*-----------------------------------------------
 ## Comments
